--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -22,5 +22,5 @@
 .section-tours {
     background-color: $color-grey-light-1;
     padding: 25rem 0 15rem 0;
-    margin-top: -10rem;
+    margin-top: -12rem;
 }
